--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Botvoldo Kanban</title>
+<title>Bryan x Botvoldo Kanban</title>
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;background:#1a1a2e;color:#e0e0e0;min-height:100vh;padding:20px}
@@ -72,7 +72,7 @@ h1{text-align:center;font-size:1.6rem;margin-bottom:4px;color:#fff}
 </style>
 </head>
 <body>
-<h1>🗂 Botvoldo Kanban</h1>
+<h1>🗂 Bryan x Botvoldo Kanban</h1>
 <div class="subtitle" id="subtitle"></div>
 <div class="tabs" id="tabs"></div>
 <div class="board" id="board"></div>
