Fix: restore Email Molly → done (reverted by mistake)

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const DATA = {
     "Engel / Pro Rata": {
       tabClass: "tab-engel",
       tasks: [
-        { status: "not-started", desc: "Email Molly project plan for week 1", notes: "Send Molly the week 1 project plan for Pro Rata / Engel Collective engagement.", docs: [] },
+        { status: "done", desc: "Email Molly project plan for week 1", notes: "Send Molly the week 1 project plan for Pro Rata / Engel Collective engagement.", docs: [] },
         { status: "not-started", desc: "Creative Claude Cowork initial work", notes: "Use the creative production workflow prompt in Claude Cowork.", docs: [
           { name: "Creative Workflow Prompt", url: "https://drive.google.com/file/d/1gvRNCwf5jw8LdtnPtNO0BS3_Rw8hKf-v/view", icon: "📄" }
         ]},
